# testingincpp

./: CMakeLists.txt
tests/: test_student_evaluation.cpp
